サイト内容大幅変更

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>テストサイト</h1>
+    <h1>test-site02</h1>
+    <p>hello world!!</p>
+    <p>まったく違う内容にするとどうなる？？</p>
 </body>
 </html>
